syntax = "proto3";

option go_package = ".";

import "google/protobuf/any.proto";

message PaymentCreateRequest { 
    float amount = 1;
    PaymentType type = 5;
    uint64 merchant_id = 6;
    string phone = 7;
    uint64 customer_id = 8;
    string note = 9;
}

	// InvoiceResult struct {
	// 	BankInvoiceID string     `json:"bank_invoice_id"`
	// 	BankQRCode    string     `json:"bank_qr_code"`
	// 	Deeplinks     []Deeplink `json:"deeplinks"`
	// 	IsPaid        bool       `json:"is_paid"`
	// 	Raw           any        `json:"raw"`
	// }

	// Deeplink struct {
	// 	Name        string `json:"name"`
	// 	Description string `json:"description"`
	// 	Link        string `json:"link"`
	// 	Logo        string `json:"logo"`
	// }

message InvoiceResult { 
    string bank_invoice_id = 1;
    string bank_qr_code = 2;
    repeated Deeplink deeplinks = 3;
    bool is_paid = 4;
    google.protobuf.Any raw = 5;
}

message Deeplink { 
    string name = 1;
    string description = 2;
    string link = 3;
    string logo = 4;
}

message PaymentCreateResponse { 
    string uid = 1;
    InvoiceResult invoiceResult = 2;
}

message PaymentCheckRequest { 
    string uid = 1;
}

message PaymentCheckResponse { 
    string uid = 1;
    float amount = 2;
    PaymentStatus status = 3;
}

enum PaymentStatus { 
    PAYMENT_STATUS_PENDING     = 0;
    PAYMENT_STATUS_PAID        = 1;
    PAYMENT_STATUS_CANCELLED   = 2;
    PAYMENT_STATUS_REFUNDED    = 3;
}

enum PaymentType { 
    PAYMENT_TYPE_QPAY = 0;
    PAYMENT_TYPE_TOKIPAY = 1;
    PAYMENT_TYPE_MONPAY = 2;
    PAYMENT_TYPE_GOLOMT = 3;
    PAYMENT_TYPE_SOCIALPAY = 4;
    PAYMENT_TYPE_STOREPAY = 5;
    PAYMENT_TYPE_POCKET = 6;
    PAYMENT_TYPE_SIMPLE = 7;
    PAYMENT_TYPE_BALC = 8;
}
service PaymentService { 
    rpc Create(PaymentCreateRequest) returns (PaymentCreateResponse);
    rpc Check(PaymentCheckRequest) returns (PaymentCheckResponse);
    rpc CheckStream(PaymentCheckRequest) returns (stream PaymentCheckResponse);
}